Добавлены иконки в шапку главного макета

--- a/index.html
+++ b/index.html
@@ -14,8 +14,14 @@
             <li><a href="">Контакты</a></li>
         </ul>
         <ul>
-            <li><a href="">info@devstudio.com</a></li>
-            <li><a href="">+38 096 111 11 11</a></li>
+            <li><a href="">
+                <img src="./images/envelope.png" alt="">
+                info@devstudio.com
+            </a></li>
+            <li><a href="">
+                <img src="./images/vector.png" alt="">
+                +38 096 111 11 11
+            </a></li>
         </ul>
     </header>
     
