--- a/index.html
+++ b/index.html
@@ -31,22 +31,22 @@
     <section>
         <ul>
             <li>
-                <img src="./images/vector1.png" alt="">
+                <img src="./images/vector1.svg" alt="">
                 <h2>Внимание к деталям</h2>
                 <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
             </li>
             <li>
-                <img src="./images/vector2.png" alt="">
+                <img src="./images/vector2.svg" alt="">
                 <h2>Пунктуальность</h2>
                 <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
             </li>
             <li>
-                <img src="./images/vector3.png" alt="">
+                <img src="./images/vector3.svg" alt="">
                 <h2>Планирование</h2>
                 <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
             </li>
             <li>
-                <img src="./images/vector4.png" alt="">
+                <img src="./images/vector4.svg" alt="">
                 <h2>Современные технологии</h2>
                 <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
             </li>
