--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <!--Шапка сайта-->
+    <!--Шапка сайта--> 
     <header>
         <a href="">WebStudio</a>
         <ul>
@@ -17,10 +17,10 @@
         </ul>
         <ul>
             <li>
-                <a href="">info@devstudio.com</a>
+                <a href="mailto:info@example.com">info@devstudio.com</a>
             </li>
             <li>
-                <a href="">+38 096 111 11 11</a>
+                <a href="tel:+380991111111">+38 096 111 11 11</a>
             </li>
         </ul>
     </header>
@@ -36,19 +36,19 @@
         <section>
             <ul>
                 <li>
-                    <h2>Внимание к деталям</h2>
+                    <h3>Внимание к деталям</h3>
                     <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
-                    <h2>Пунктуальность</h2>
+                    <h3>Пунктуальность</h3>
                     <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li>
-                    <h2>Планирование</h2>
+                    <h3>Планирование</h3>
                     <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li>
-                    <h2>Современные технологии</h2>
+                    <h3>Современные технологии</h3>
                     <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
@@ -58,9 +58,9 @@
         <section>
             <h2>Чем мы занимаемся</h2>
             <ul>
-                <li><img src="./images/work/img.jpg" alt="Схема"></li>
-                <li><img src="./images/work/img1.jpg" alt="Телефон"></li>
-                <li><img src="./images/work/img2.jpg" alt="Выбор цвета"></li>
+                <li><img src="./images/work/img.jpg" width="370" alt="Схема"></li>
+                <li><img src="./images/work/img1.jpg" width="370" alt="Телефон"></li>
+                <li><img src="./images/work/img2.jpg" width="370" alt="Выбор цвета"></li>
             </ul>
         </section>
 
@@ -69,22 +69,22 @@
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <img src="./images/worker/img.jpg" alt="Парень в очках">
+                    <img src="./images/worker/img.jpg" width="270" alt="Парень в очках" >
                     <h3>Игорь Демьяненко</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/worker/img(1).jpg" alt="Девушка в очках">
+                    <img src="./images/worker/img(1).jpg" width="270" alt="Девушка в очках">
                     <h3>Ольга Репина</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/worker/img(2).jpg" alt="Парень без очков">
+                    <img src="./images/worker/img(2).jpg" width="270" alt="Парень без очков">
                     <h3>Николай Тарасов</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/worker/img(3).jpg" alt="Парень в очках">
+                    <img src="./images/worker/img(3).jpg" width="270" alt="Парень в очках">
                     <h3>Михаил Ермаков</h3>
                     <p>UI Designer</p>
                 </li>
@@ -96,12 +96,13 @@
     <!--Футер-->
     <footer>
         <div>
-            <h3>WebStudio</h3>
-            <address>г. Киев, пр-т Леси Украинки, 26</address>
-            
             <address>
-                <a href="">info@example.com</a>
-                <a href="">+38 099 111 11 11</a>
+                <ul>
+                    <li><a href="">WebStudio</a></li>
+                    <li><a href="">г.Киев, пр-т Леси Украинки, 26</a></li>
+                    <li><a href="mailto:info@example.com">info@example.com</a></li>
+                    <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+                </ul> 
             </address>
         </div>
     </footer>
