Исправляет положение логотипа в подвале

--- a/index.html
+++ b/index.html
@@ -69,22 +69,22 @@
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <img src="./images/worker/img.jpg" width="270" alt="Парень в очках" >
+                    <img src="./images/worker/box.jpg" width="270" alt="Парень в очках" >
                     <h3>Игорь Демьяненко</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/worker/img(1).jpg" width="270" alt="Девушка в очках">
+                    <img src="./images/worker/box1.jpg" width="270" alt="Девушка в очках">
                     <h3>Ольга Репина</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/worker/img(2).jpg" width="270" alt="Парень без очков">
+                    <img src="./images/worker/box2.jpg" width="270" alt="Парень без очков">
                     <h3>Николай Тарасов</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/worker/img(3).jpg" width="270" alt="Парень в очках">
+                    <img src="./images/worker/box3.jpg" width="270" alt="Парень в очках">
                     <h3>Михаил Ермаков</h3>
                     <p>UI Designer</p>
                 </li>
@@ -96,9 +96,9 @@
     <!--Футер-->
     <footer>
         <div>
+            <a href="./index.html">WebStudio</a>
             <address>
                 <ul>
-                    <li><a href="">WebStudio</a></li>
                     <li><a href="">г.Киев, пр-т Леси Украинки, 26</a></li>
                     <li><a href="mailto:info@example.com">info@example.com</a></li>
                     <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
